fixed shadows on retailer carousel on ios

--- a/src/components/SwiperMenu/SwiperMenu.module.scss
+++ b/src/components/SwiperMenu/SwiperMenu.module.scss
@@ -3,7 +3,10 @@
 .menuWrapper {
   max-width: 100%;
   min-height: 40px;
-  padding: 0 16px 32px 16px;
+
+  :global(.swiper-wrapper) {
+    padding: 0 16px 32px 16px;
+  }
 
   &.pdBt28 {
     padding: 0 16px 28px 16px;
